--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-        <a href="prosjekt.html">Prosjekt</a>
+        <a href="html/prosjekt.html">Prosjekt</a>
     
 </body>
 </html>
