--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
     <title>Forside</title>
 </head>
 <body>
 
-        <a href="html/prosjekt.html">Prosjekt</a>
+        <ul>
+            <li><a href="html/prosjekt.html">Prosjekt</a></li>
+        </ul>
     
 </body>
 </html>
