--- a/html/handle.html
+++ b/html/handle.html
@@ -26,6 +26,7 @@
                 <li><a href="omoss.html">Om oss</a></li>
                 <li><a href="handlekurv.html">Handlekurv</a></li>
                 <li><a href="animajon.html">Kommer snart</a></li>
+                <li><a href="vurdering.html">Vurdering</a></li>                
                 <input type="text" placeholder="søk..." id="find">
             </ul>
         </div>
